# modular

./: .gitignore  CMakeLists.txt  README.md  package.xml
exp/20260116_111109_A30_f0.5/: A030deg_f0500mHz_angle.csv  A030deg_f0500mHz_angle_all.csv  A030deg_f0500mHz_force.csv  GX010208_tracking_result.csv  trial_A030deg_f0500.mHz_r00_ft.csv
exp/20260116_111142_A30_f1.0/: A030deg_f1000mHz_angle.csv  A030deg_f1000mHz_angle_all.csv  A030deg_f1000mHz_force.csv  GX010209_tracking_result.csv  trial_A030deg_f1000.mHz_r00_ft.csv
exp/20260116_112147_A40_f0.5/: A040deg_f0500mHz_angle.csv  A040deg_f0500mHz_angle_all.csv  A040deg_f0500mHz_force.csv  GX010219_tracking_result.csv  pipeline.py  summary.csv  trial_A040deg_f0500.mHz_r00_ft.csv
models/meshes/: cap.stl  flA.STL  flB.STL  force_sensor.STL  main_body.STL  motor.STL  motor_paddle.STL  paddle.STL
models/urdf/: colony.urdf  colony.xacro  colony_2.urdf  colony_2.xacro  module.urdf  module.xacro
models/xml/: asset.xml  environment.xml  modular.xml  test.xml  test_force.xml  test_module.xml
models/xml/colony/: test_10_circle.xml  test_1_circle.xml  test_2_circle.xml  test_4_circle.xml  test_6_circle.xml  test_8_circle.xml
modular_msgs/: CMakeLists.txt  package.xml
modular_msgs/msg/: ControlMsg.msg  StateMsg.msg
src/controller/: CMakeLists.txt  package.xml
src/controller/config/: modular_config.yaml  modular_params.yaml
src/controller/include/controller/: module_ctrl.hpp
src/controller/include/data/: config.hpp  ltv.hpp  module.hpp
src/controller/include/simulation/: dynamics_simulator.hpp  mujoco_simulator.hpp  simulator.hpp  viewer.hpp
src/controller/include/utils/: utils.hpp  xml_utils.hpp
src/controller/launch/: modular_launch.py
src/controller/scripts/: MUJOCO_LOG.TXT  agent.py  simulator.py  test.py  test_colony.py  test_experiment.py  test_force.py  test_module.py
src/controller/src/: ctrl_node.cpp  dynamics_simulation.cpp  dynamics_simulation_multi.cpp  sim_node.cpp
src/controller/src/controller/: module_ctrl.cpp
src/controller/src/data/: config.cpp
src/controller/src/simulation/: dynamics_simulator.cpp  mujoco_simulator.cpp  simulator.cpp  viewer.cpp
