<?xml version="1.0"?>
<package format="3">
  <name>modular</name>
  <version>0.0.0</version>
  <description>The modular robot synchronization</description>

  <maintainer email="twkim@todo.todo">twkim</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>modular_msgs</depend>

  <!-- Other libraries -->
  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>

  <!-- Python -->
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 